# cross-chain-bridge-indexer

./: README.md
bridge-indexer/: .env  .env.example  .gitignore  Cargo.toml  init.sql
bridge-indexer/abis/: TokenBridge.json
bridge-indexer/src/: abi.rs  db.rs  main.rs
cross-chain-bridge/: .gitignore
cross-chain-bridge/broadcast/DeployTokenBridge.s.sol/17000/: run-latest.json
cross-chain-bridge/broadcast/DeployTokenBridge.s.sol/421614/: run-latest.json
cross-chain-bridge/broadcast/DeployTokenBridge.s.sol/84532/: run-1741169090.json
cross-chain-bridge/script/: DeployTestToken.s.sol  DeployTokenBridge.s.sol
cross-chain-bridge/src/: TestToken.sol  TokenBridge.sol
cross-chain-bridge/test/: TokenBridge.t.sol
